Add an example about dynamic library compilation.

--- a/rootTreeTest/exe/Makefile
+++ b/rootTreeTest/exe/Makefile
@@ -1,12 +1,15 @@
+PROJNAME=prog
+
 FLAGS=-std=c++11 -Wall -Wextra -Wpedantic
 INCFLAGS=-I`root-config --incdir`
 LDFLAGS=`root-config --libs`
-TARGET=prog
+
+EXEC=$(PROJNAME).exe
 
 .PHONY: all clean
 
 all: main.o classes.o classesdict.o
-	g++ main.o classes.o classesdict.o -o $(TARGET) $(FLAGS) $(LDFLAGS)
+	g++ main.o classes.o classesdict.o $(FLAGS) $(LDFLAGS) -o $(EXEC)
 
 main.o :
 	g++ -c main.cpp $(FLAGS) $(INCFLAGS)
@@ -17,8 +20,9 @@ classes.o :
 classesdict.o : classesdict.cpp
 	g++ -c classesdict.cpp $(FLAGS) $(INCFLAGS)
 
+# Use rootcint for ROOT5 and rootcling for ROOT6
 classesdict.cpp :
-	rootcint -f classesdict.cpp -c classes.h LinkDef.h
+	rootcling -f classesdict.cpp -c classes.h LinkDef.h
 
 clean :
-	rm -fv *.o classesdict.cpp classesdict_rdict.pcm *.root $(TARGET)
+	rm -fv *.o classesdict.cpp classesdict_rdict.pcm *.root $(EXEC)
