--- a/VisuEngine/Test4/parsing/Makefile
+++ b/VisuEngine/Test4/parsing/Makefile
@@ -2,7 +2,7 @@
 
 all:
 	flex --header-file=stl_parsing.flex.h -o stl_parsing.flex.cpp stl_parsing.l
-	bison -d --defines=stl_parsing.tab.h -o stl_parsing.tab.cpp stl_parsing.y
+	bison --defines=stl_parsing.tab.h -o stl_parsing.tab.cpp stl_parsing.y
 	g++ main.cpp stl_parsing.flex.cpp stl_parsing.tab.cpp ../cls_stl_file.cpp -o parsing
 
 clean:
