Fix scene with multiple models. Implement highlight_triangle function. Start imlementing logger.

--- a/VisuEngine/Test4/CMakeLists.txt
+++ b/VisuEngine/Test4/CMakeLists.txt
@@ -55,6 +55,7 @@ set(SOURCE_LIB cls_camera.cpp
                cls_renderer.cpp
                cls_offscreen_renderer.cpp
                cls_scene.cpp
+               cls_logger.cpp
                support.cpp)
 
 add_library(graphics SHARED ${SOURCE_LIB})
