--- a/VisuEngine/Test4/stl_interface/CMakeLists.txt
+++ b/VisuEngine/Test4/stl_interface/CMakeLists.txt
@@ -3,8 +3,7 @@ set(SOURCE_LIB_STL_INTERFACE stl_parsing.flex.cpp
                              cls_stl_file.cpp
                              cls_stl_interface.cpp)
 
-add_library(stl_interface SHARED ${SOURCE_LIB_STL_INTERFACE})
-
+# CMAKE_CURRENT_SOURCE_DIR is required here because flex/bison are stupid
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}
                     ${CMAKE_SOURCE_DIR})
 
@@ -24,3 +23,7 @@ add_custom_command(
          ${CMAKE_CURRENT_SOURCE_DIR}/stl_parsing.y
     VERBATIM
     )
+
+add_library(stl_interface SHARED ${SOURCE_LIB_STL_INTERFACE})
+
+target_link_libraries(stl_interface base)
