Implement triangle picking using unique color technique. Very slow.

--- a/VisuEngine/Test4/stl_interface/Makefile
+++ b/VisuEngine/Test4/stl_interface/Makefile
@@ -1,3 +1,4 @@
+COMPILER=g++
 TARGET=prog
 
 FLAGS=-std=c++11 -Wall -Wextra -Wpedantic
@@ -5,28 +6,28 @@ FLAGS=-std=c++11 -Wall -Wextra -Wpedantic
 .PHONY: all clean
 
 all: main.o cls_stl_file.o cls_stl_interface.o stl_parsing.flex.o stl_parsing.tab.o
-	g++ $(FLAGS) main.o cls_stl_file.o cls_stl_interface.o stl_parsing.flex.o stl_parsing.tab.o -o $(TARGET)
+	$(COMPILER) $(FLAGS) $^ -o $(TARGET)
 
-main.o:
-	g++ $(FLAGS) main.cpp -c
+main.o: main.cpp
+	$(COMPILER) $(FLAGS) -c $^
 
-cls_stl_file.o:
-	g++ $(FLAGS) cls_stl_file.cpp -c
+cls_stl_file.o: cls_stl_file.cpp
+	$(COMPILER) $(FLAGS) -c $^ -I../
 
-cls_stl_interface.o:
-	g++ $(FLAGS) cls_stl_interface.cpp -c
+cls_stl_interface.o: cls_stl_interface.cpp
+	$(COMPILER) $(FLAGS) -c $^ -I../
 
 stl_parsing.flex.o: stl_parsing.flex.cpp
-	g++ $(FLAGS) stl_parsing.flex.cpp -c
+	$(COMPILER) $(FLAGS) -c $^
 
 stl_parsing.tab.o: stl_parsing.tab.cpp
-	g++ $(FLAGS) stl_parsing.tab.cpp -c
+	$(COMPILER) $(FLAGS) -c $^
 
-stl_parsing.flex.cpp: stl_parsing.tab.cpp
-	flex --header-file=stl_parsing.flex.h -o stl_parsing.flex.cpp stl_parsing.l
+stl_parsing.flex.cpp: stl_parsing.l stl_parsing.tab.cpp
+	flex --header-file=stl_parsing.flex.h -o $@ stl_parsing.l
 
-stl_parsing.tab.cpp:
-	bison --defines=stl_parsing.tab.h -o stl_parsing.tab.cpp stl_parsing.y
+stl_parsing.tab.cpp: stl_parsing.y
+	bison --defines=stl_parsing.tab.h -o $@ stl_parsing.y
 
 clean:
 	rm -fv $(TARGET)
