--- a/VisuEngine/Test4/CMakeLists.txt
+++ b/VisuEngine/Test4/CMakeLists.txt
@@ -41,6 +41,8 @@ if (CMAKE_COMPILER_IS_GNUCXX)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -Wextra -Wpedantic -std=c++11")
 endif()
 
+# set(CMAKE_VERBOSE_MAKEFILE ON)
+
 # ===============================================
 
 set(SOURCE_EXE main.cpp)
