Add BeamDetMWPCDigi class and writeout after the second step of analysis using this class. Still to implement integration with expertroot.

--- a/go4_5H_processor/CMakeLists.txt
+++ b/go4_5H_processor/CMakeLists.txt
@@ -6,6 +6,8 @@ cmake_minimum_required(VERSION 3.5)
 
 project(go4_5H_processor)
 
+# set(CMAKE_VERBOSE_MAKEFILE ON)
+
 # ===============================================
 # External packages
 
@@ -17,7 +19,43 @@ find_package(ROOT REQUIRED)
 include(${ROOT_USE_FILE})
 
 # Go4
-include_directories($ENV{GO4SYS}/include)
+if (DEFINED ENV{GO4SYS})
+    message("Go4 found at $ENV{GO4SYS}")
+    include_directories($ENV{GO4SYS}/include)
+else()
+    message(FATAL_ERROR "Go4 not found! Please, run go4login or define the GO4SYS env. variable.")
+endif()
+
+# # ExpertRoot
+# if (DEFINED ENV{ERSYS})
+#     message("ExpertRoot found at $ENV{ERSYS}")
+#     include_directories($ENV{ERSYS})
+# else()
+#     message(FATAL_ERROR "ExpertRoot not found! Please, define the ERSYS env. variable pointing to the ExpertRoot source directory.")
+# endif()
+
+# # ExpertRoot build
+# if (DEFINED ENV{ERBUILD})
+#     message("ExpertRoot build found at $ENV{ERBUILD}")
+# else()
+#     message(FATAL_ERROR "ExpertRoot build not found! Please, define the ERBUILD env. variable pointing to the ExpertRoot build directory.")
+# endif()
+
+# # FairRoot
+# if (DEFINED ENV{FAIRROOTPATH})
+#     message("FairRoot found at $ENV{FAIRROOTPATH}")
+#     include_directories($ENV{FAIRROOTPATH}/include)
+# else()
+#     message(FATAL_ERROR "FairRoot not found! Please, run [er_build_dir]/config.sh or define the FAIRROOTPATH env. variable.")
+# endif()
+
+# # FairSoft
+# if (DEFINED ENV{SIMPATH})
+#     message("FairSoft found at $ENV{SIMPATH}")
+#     include_directories($ENV{SIMPATH}/include)
+# else()
+#     message(FATAL_ERROR "FairSoft not found! Please, run [er_build_dir]/config.sh or define the SIMPATH env. variable.")
+# endif()
 
 # ===============================================
 
@@ -26,6 +64,9 @@ include_directories($ENV{GO4SYS}/include)
 # endif()
 
 # ===============================================
+# ROOT dictionary
+
+include_directories(${CMAKE_SOURCE_DIR})
 
 set(ROOTCLING_HEADERS UserAnalysis.h
                       UserEvent.h
@@ -33,9 +74,12 @@ set(ROOTCLING_HEADERS UserAnalysis.h
                       UserEventStep2.h
                       UserProcStep2.h
                       UserAnalysisHistos.h
+                      data/BeamDetMWPCDigi.h
                       )
 
 ROOT_GENERATE_DICTIONARY(G__UserAnalysis ${ROOTCLING_HEADERS} LINKDEF UserAnalysisLinkDef.h)
+
+# ===============================================
 
 set(SOURCE_LIB G__UserAnalysis.cxx
                UserAnalysis.cxx
@@ -44,6 +88,16 @@ set(SOURCE_LIB G__UserAnalysis.cxx
                UserEventStep2.cxx
                UserProcStep2.cxx
                UserAnalysisHistos.cxx
+               data/BeamDetMWPCDigi.cxx
                )
 
 add_library(UserAnalysis SHARED ${SOURCE_LIB})
+
+# ===============================================
+# ExpertRoot
+# BeamDet
+
+# add_library(ERBeamDet SHARED IMPORTED)
+# set_target_properties(ERBeamDet PROPERTIES IMPORTED_LOCATION $ENV{ERBUILD}/lib/libERBeamDet.so)
+
+# target_link_libraries(UserAnalysis)
