--- a/go4_5H_processor/setupconfig/CMakeLists.txt
+++ b/go4_5H_processor/setupconfig/CMakeLists.txt
@@ -1,29 +1,14 @@
-# =============================================================================
-# ROOT dictionary
+set(SRCDIR pureC)
 
-# Normally this is not needed, but rootcling cannot see these files
-# if the current source directory (which is 'PROJECTBASEDIR/src' in our case)
-# is not added to the include_directories list.
-include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+set(SOURCE_LIB ${SRCDIR}/functions.c
+               ${SRCDIR}/xmlparsing.c
+               )
 
-set(ROOTCLING_HEADERS SetupConfig.h
-                      stc_mapping.h
-                      )
-
-ROOT_GENERATE_DICTIONARY(G__SetupConfig ${ROOTCLING_HEADERS} LINKDEF SetupConfigLinkDef.h)
-
-# =============================================================================
-
-set(SOURCE_LIB G__SetupConfig.cxx
-               SetupConfig.cxx
+set(SOURCE_EXE ${SRCDIR}/main.c
                )
 
 add_library(SetupConfig SHARED ${SOURCE_LIB})
 
-add_executable(setupconfigtest setupconfig_test.cpp)
+add_executable(setup_config_test ${SOURCE_EXE})
 
-# This project libraries
-target_link_libraries(setupconfigtest SetupConfig)
-
-# ROOT libraries
-target_link_libraries(setupconfigtest Core RIO)
+target_link_libraries(setup_config_test SetupConfig)
