Massive commit. Make setupconfig/pureC code work independently as a pure-C project. Create the C++ wrapper around that pure-C code. Implement setup-dependent monitoring step - no more hard-coded geo addresses and electronics blocks' names. Fix errors in setup.xml.'

--- a/go4_5H_processor/src/CMakeLists.txt
+++ b/go4_5H_processor/src/CMakeLists.txt
@@ -5,6 +5,7 @@
 # if the current source directory (which is 'PROJECTBASEDIR/src' in our case)
 # is not added to the include_directories list.
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+include_directories(${CMAKE_SOURCE_DIR})
 
 set(ROOTCLING_HEADERS UserAnalysis.h
                       UserEventUnpacking.h
@@ -44,4 +45,4 @@ add_library(UserAnalysis SHARED ${SOURCE_LIB})
 
 target_link_libraries(UserAnalysis Go4Analysis)
 
-target_link_libraries(UserAnalysis SetupConfig)
+target_link_libraries(UserAnalysis SetupConfigCppWrapper)
