Rename src into useranalysis.

--- a/go4_5H_processor/CMakeLists.txt
+++ b/go4_5H_processor/CMakeLists.txt
@@ -38,6 +38,6 @@ endif()
 
 # =============================================================================
 
-add_subdirectory(src)
+add_subdirectory(useranalysis)
 add_subdirectory(setupconfig)
 add_subdirectory(setupconfigcppwrapper)
