--- a/go4_5H_processor/CMakeLists.txt
+++ b/go4_5H_processor/CMakeLists.txt
@@ -32,8 +32,8 @@ endif()
 # =============================================================================
 
 if (CMAKE_COMPILER_IS_GNUCXX)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall")
-    # -std=c++11 -Wextra -Wpedantic
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -Wextra")
+    # -std=c++11 -g -Wall -Wextra -Wpedantic
 endif()
 
 # =============================================================================
