Massive commit. Implement mesh analysis structure. Implement 'learn' module. Test pure-C code onRIO3 and tune it accordingly. Update README. Implement correct MWPC processing (n[xy][12], [xy][12], r[xy][12]). Implement very basic MWPC histograms. Implement scalers processing. Implement trigger processing.

--- a/go4_5H_processor/setupconfig/pureC/Makefile
+++ b/go4_5H_processor/setupconfig/pureC/Makefile
@@ -1,5 +1,7 @@
 COMPILER=cc
-FLAGS=-Wall -Wextra -Wpedantic -g
+
+FLAGS=-g -std=c89
+FLAGS+=-Wall -Wextra -Wpedantic
 
 test: main.o functions.o xmlparsing.o
 	$(COMPILER) $(FLAGS) $^ -o $@
