--- a/VisuEngine/Test4/brep/CMakeLists.txt
+++ b/VisuEngine/Test4/brep/CMakeLists.txt
@@ -1,5 +1,8 @@
-set(SOURCE_LIB_BREP cls_circle.cpp)
+set(SOURCE_LIB_BREP cls_circle.cpp
+                    cls_planar_patch.cpp)
 
 include_directories(${CMAKE_SOURCE_DIR})
 
 add_library(brep SHARED ${SOURCE_LIB_BREP})
+
+target_link_libraries(brep algo)
